--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,18 @@
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?android:attr/colorBackground"
     android:contextClickable="true"
-    >
+    android:scrollIndicators="bottom">
 
     <android.support.v4.view.PagerTitleStrip
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/holo_blue_light"
         android:paddingBottom="15dp"
-        android:paddingTop="20dp"
-        android:textDirection="firstStrong"
-        android:background="@color/colorPrimary">
-        </android.support.v4.view.PagerTitleStrip>
+        android:paddingTop="10dp"></android.support.v4.view.PagerTitleStrip>
 
 
 </android.support.v4.view.ViewPager>
