--- a/app/src/main/res/layout/emergency_contact.xml
+++ b/app/src/main/res/layout/emergency_contact.xml
@@ -3,17 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.v7.widget.CardView
-        android:id="@+id/cv_About"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        card_view:cardBackgroundColor="#ffffff"
+        card_view:cardCornerRadius="2dp"
+        card_view:cardElevation="5dp"
+        android:id="@+id/cardview"
+        android:layout_margin="10dp"
+        >
 
-        android:elevation="5dp"
-    >
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
