--- a/app/src/main/res/layout/emergency_contact.xml
+++ b/app/src/main/res/layout/emergency_contact.xml
@@ -19,17 +19,19 @@
         android:layout_height="match_parent"
         android:scrollbarAlwaysDrawHorizontalTrack="false"
         android:scrollbarAlwaysDrawVerticalTrack="true">
+
         <RelativeLayout
+            android:id="@+id/layout1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="20dp">
+
             <LinearLayout
+                android:id="@+id/linear1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:id="@+id/linear1"
-                >
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="110dp"
@@ -37,6 +39,7 @@
                     android:text="Name of Contact" />
 
                 <EditText
+                    android:id="@+id/contactname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -56,16 +59,18 @@
                     android:text="Relationship" />
 
                 <EditText
+                    android:id="@+id/relation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
             </LinearLayout>
+
             <LinearLayout
+                android:id="@+id/linear3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:id="@+id/linear3"
-                android:layout_below="@+id/linear2">
+                android:layout_below="@+id/linear2"
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="110dp"
@@ -73,6 +78,7 @@
                     android:text="Address" />
 
                 <EditText
+                    android:id="@+id/address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
@@ -91,16 +97,18 @@
                     android:text="Phone no" />
 
                 <EditText
+                    android:id="@+id/phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="phone" />
             </LinearLayout>
+
             <LinearLayout
+                android:id="@+id/linear5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:id="@+id/linear5"
-                android:layout_below="@+id/linear4">
+                android:layout_below="@+id/linear4"
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="110dp"
@@ -108,12 +116,23 @@
                     android:text="Email" />
 
                 <EditText
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress|textWebEmailAddress" />
+
             </LinearLayout>
+            <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/buton"
+            android:text="submit"
+            android:layout_below="@+id/linear5"
+            />
+
         </RelativeLayout>
     </ScrollView>
+
 </android.support.v7.widget.CardView>
 </RelativeLayout>
 
