--- a/app/src/main/res/layout/english_language.xml
+++ b/app/src/main/res/layout/english_language.xml
@@ -37,6 +37,7 @@
                     android:text=" Test Name" />
 
                 <EditText
+                    android:id="@+id/testname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
@@ -55,6 +56,7 @@
                     android:text="Date of Test" />
 
                 <EditText
+                    android:id="@+id/dob"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="20dp"
@@ -75,6 +77,7 @@
                     android:text="Test Report no" />
 
                 <EditText
+                    android:id="@+id/testreport"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number" />
@@ -93,6 +96,7 @@
                     android:text="Overall Result" />
 
                 <EditText
+                    android:id="@+id/overallresult"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number|numberDecimal" />
@@ -111,6 +115,7 @@
                     android:text="Reading" />
 
                 <EditText
+                    android:id="@+id/reading"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number|numberDecimal" />
@@ -129,6 +134,7 @@
                     android:text="Writing" />
 
                 <EditText
+                    android:id="@+id/writing"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number|numberDecimal" />
@@ -147,6 +153,7 @@
                     android:text="Listening" />
 
                 <EditText
+                    android:id="@+id/listening"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number|numberDecimal" />
@@ -165,6 +172,7 @@
                     android:text="Speaking" />
 
                 <EditText
+                    android:id="@+id/speaking"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number|numberDecimal" />
